Release Notes

* 5/20/2015
  * changed to allow a list of sites in task.site
  * added useCompleteOny to getAvailableFiles

* 5/18/2015
  * unset maxSize in InputChunk when nFilesPerJob or nEventsPerJob is set

* 5/13/2015
  * changed getAtom to take nEventsPerJob into account

* 5/12/2015
  * changed getJobsToBeProcessed for merge jobs to ignore maxJobs

* 5/11/2015
  * added useRealNumEvents
  * added exhausted

* 5/6/2015
  * changed JG to refresh job statistics before the innermost loop
  * fixed getTasksTobeProcessed to take maxJobs into account more precisely

* 5/5/2015
  * introduced maxFailure
  * using list_dataset_replicas of rucio API

* 4/27/2015
  * added restartTasksForContentsUpdate

* 4/26/2015
  * diabled to set ramCount using scouts
  * added debug messages to getTasksToBeFinished and prepareTasksToBeFinished

* 4/2/2015
  * introduced negative walltime to disable lopping job detection

* 3/29/2015
  * changed AtlasTS to set metadata to prod datasets
  * modified to prepareTasks
  * fixed insertFiles for nLost

* 3/27/2015
  * changed to propagate number of input events to DEFT

* 3/26/2015
  * changed insertFiles to fill nEvents for input
  * changed AtlasPJB to add criteria=+-tag

* 3/24/2015
  * changed JG to serizlize threads
  * changed latestDBR to use DBR with one or more replicas

* 3/23/2015
  * set the upper limit on wallTime from scout job data

* 3/20/2015
  * changed AtlasAJB for release check
  * changed AtlasTS to always register user datasets

* 3/19/2015
  * changed AtlasTR to set transient metadata

* 3/18/2015
  * changed AtlasPP to set transient metadata

* 3/17/2015
  * fixed getSiteStorageEndpointMap for NL
  * fixed JG to use currentPriority instead of currentPriority

* 3/12/2015
  * changed not to update contents when task is pending

* 3/11/2015
  * added cap in AtlasPJB
  * added invalid character check in dataset name

* 3/10/2015
  * added lockProcess
  * changed queue lengh to 450*4