@@ -193,6 +193,8 @@ class TaskRefinerBase (object):
             self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['useExhausted'])
         if 'useRealNumEvents' in taskParamMap:
             self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['useRealNumEvents'])
+        if 'ipConnectivity' in taskParamMap:
+            self.taskSpec.setIpConnectivity(taskParamMap['ipConnectivity'])
         # return
         return
     
